@@ -1,0 +1,39 @@
+version: '3.8'
+
+services:
+  app:
+    container_name: app
+    image: app_image
+    env_file:
+      - .env
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - ./:/src
+    ports:
+      - "8000:8000"
+    depends_on:
+      - app_db
+
+  app_db:
+    container_name: app_db
+    hostname: app_db
+    image: bitnami/postgresql:15.4.0
+    environment:
+      - POSTGRES_USER=app
+      - POSTGRES_PASSWORD=app
+      - POSTGRES_DB=app
+    volumes:
+      - app_pg_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+
+volumes:
+  app_pg_data:
+    driver: "local"
+
+networks:
+  default:
+    external: true
+    name: app_main
